Closed Bug 866588 Opened 12 years ago Closed 12 years ago

"Assertion failure: GetFirstInFlow() != aPrevInFlow" with LRE, pre-wrap, :first-line

Categories

(Core :: Layout, defect)

x86_64
macOS
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla23

People

(Reporter: jruderman, Assigned: MatsPalmgren_bugz)

References

Details

(Keywords: assertion, testcase)

Attachments

(4 files, 2 obsolete files)

Assertion failure: GetFirstInFlow() != aPrevInFlow, at layout/generic/nsInlineFrame.cpp:964 This assertion was added in bug 861643.
Attached file stack (gdb)
Assignee: nobody → matspal
Attached file frame dump
nsBidiPresUtils::ResolveParagraph makes the continuation non-fluid. Simon, is this a bug?
Attached patch wallpaper (obsolete) — Splinter Review
Fwiw, this fixes it but maybe we should check IsBidiSplittable(parent) instead like we do in similar code a few lines down. http://hg.mozilla.org/mozilla-central/annotate/05533d50f2f7/layout/base/nsBidiPresUtils.cpp#l859
I seem to recall that you had a patch recently in this block but that it was rejected / backed out for some reason?
Do you mean bug 722137, which got backed out in bug 818454, then reapplied in bug 826163, and the code that you're now touching got added at the same time. It's probably worth testing with the testcase I just attached to bug 818454, attachment 743037 [details].
Attached patch fix+testSplinter Review
Thanks, that's the bugs I was looking for. I've checked the tests in those bugs. https://tbpl.mozilla.org/?tree=Try&rev=a273a2bf514b (other tests were green in a previous run)
Attachment #743027 - Attachment is obsolete: true
Attachment #743033 - Attachment is obsolete: true
Attachment #743297 - Flags: review?(smontagu)
Attachment #743297 - Flags: review?(smontagu) → review+
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla23
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: