Bug 866588 - Check that the frame IsBidiSplittable before changing a fluid continuation to non-fluid.  r=smontagu